#184 fix maven-surefire-plugin